# tg-gemini-dev

./: .coverage  Dockerfile  Makefile  PROJECT_PLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ADR_001_FOUNDATION.md  DEVELOPMENT_GUIDELINES.md  README.md  SECURITY_GUIDELINES.md  TASK_TRACKING.md  TECHNICAL_SPEC.md  TESTING_PLAN.md
services/api_gateway/: main.py
services/telegram_bot/: main.py
services/worker/: main.py
tests/integration/: test_task_flow.py  test_worker_execution.py
tests/unit/: test_api_gateway.py  test_telegram_bot.py  test_worker.py
